[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/TitlePolaris.png" type="Texture" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
focus_mode = 2
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 20.5
margin_right = 32.0
margin_bottom = 95.5001

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "Start"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
focus_neighbour_bottom = NodePath("../OptionsButton")
text = "Continue"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 69.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="MenuControls" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.335
margin_top = -31.0125
margin_right = 98.6652
margin_bottom = 7.98755
rect_scale = Vector2( 0.6, 0.6 )
text = "v.0.1.3
Menu Controls: Arrow Keys / Enter"
align = 2
valign = 2

[node name="TitleRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.733333 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.598
margin_top = -63.5736
margin_right = 559.402
margin_bottom = 116.426
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
